# plover_gemini_footpedal

./: README.md  setup.cfg
plover_geminipr_footpedal/: machine.py
