[metadata]
name = plover_geminipr_footpedal
version = 0.0.1
description = Plover support for a GeminiPR alongside a footpedal mapped to F14-16
long_description = file: README.md
long_description_content_type = text/markdown
author = AlexandraAlter
author_email = alexandra.alter@protonmail.com
license = The Unlicense (Unlicense)
url = https://github.com/AlexandraAlter/plover_geminipr_footpedal
classifiers =
  Development Status :: 1 - Planning
  Environment :: Plugins
  Intended Audience :: End Users/Desktop
  License :: OSI Approved :: The Unlicense (Unlicense)
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
keywords = plover plover_plugin
project_urls =
  Changelog = https://github.com/AlexandraAlter/plover_geminipr_footpedal/blob/master/NEWS.md
  Source Code = https://github.com/AlexandraAlter/plover_geminipr_footpedal
  Issue Tracker = https://github.com/AlexandraAlter/plover_geminipr_footpedal/issues

[options]
include_package_data = True
python_requires = >=3.8
zip_safe = True
install_requires =
  plover>=4.0.0.dev1
  plover_keyboard_plus>=0.0.5
packages =
  plover_geminipr_footpedal

[options.entry_points]
plover.machine =
  Gemini PR Footpedal = plover_geminipr_footpedal.machine:GeminiPrFootpedal
